fixed dark mode bug that caused some elements to not use dark mode

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav {
 .darkmode-button {
   border: none;
   padding: 0.7rem 2rem;
-  background-color: transparent;
+
   font-weight: 700;
 }
 .query-container {
